@@ -1,0 +1,7 @@
+# $NetBSD: Makefile,v 1.1 2006/07/14 19:54:47 jlam Exp $
+
+.include "../../pkgtools/mtree/Makefile.common"
+
+CATEGORIES=	sysutils
+
+.include "../../mk/bsd.pkg.mk"
